--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -18,11 +20,11 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.2",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.2",
     "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
   }
